Fix layout and spacing between various elements and make rules button same size as reset score button

--- a/src/css/general.css
+++ b/src/css/general.css
@@ -20,7 +20,8 @@ html {
 body {
   display: grid;
   grid-template-rows: 20fr 60fr 20fr;
-  max-width: 180rem;
+  max-width: 135rem;
+  gap: 4.8rem;
   margin: 0 auto;
   height: 100%;
   line-height: 1;
@@ -49,7 +50,7 @@ body {
   box-shadow: inset 0 0 0.3rem #fff;
   border-radius: 1rem;
   transition: all 0.3s;
-  margin-top: 6.2rem;
+  /* margin-top: 6.2rem; */
 }
 
 .btn:hover {
